webm file added

--- a/index.html
+++ b/index.html
@@ -485,9 +485,13 @@
         </div>
       <div class="container-fluid">
           <div class="row">
-              <div class="col-md-5 col-12">
-              <img  id="imagesequence" class="eye-animation w50" src="./assets/image/Girl_Card/1.png" class="w50">
-                </div>
+              <div class="col-md-5 col-12 w50">
+                <video autoplay loop  muted>
+                    <source src="assets/video/12.webm" type="video/webm">
+                    Your browser does not support the video tag.
+                  </video>
+<!--               <img  id="imagesequence" class="eye-animation w50" src="./assets/image/Girl_Card/1.png" class="w50">
+ -->                </div>
                 <div class="col-md-7 col-12 hoverImage">
                     <div class="row mrgn-btn text-center">
                         <div class="col-md-4 col-6">
