WIP for updates

--- a/contact.html
+++ b/contact.html
@@ -154,7 +154,7 @@
                                 </div>
                                 <div class="contact-contact">
                                     <h5 class="subtitle">Email Us</h5>
-                                   <!--  <a href="Mailto:info@mosto.com">info@mosto.com</a> -->
+                                    <a href="Mailto:care@omnicard.in ">care@omnicard.in </a> 
                                 </div>
                             </div>
                             <div class="contact-item">
@@ -163,8 +163,8 @@
                                 </div>
                                 <div class="contact-contact">
                                     <h5 class="subtitle">Call Us</h5>
-                                  <!--   <a href="Tel:565656855">+1 (987) 664-32-11</a>
-                                    <a href="Tel:565656855">+1 (987) 664-32-11</a> -->
+                                   <a href="Tel:120 4520279">+91 120 4520279</a>
+                                   
                                 </div>
                             </div>
                             <div class="contact-item">
@@ -173,7 +173,8 @@
                                 </div>
                                 <div class="contact-contact">
                                     <h5 class="subtitle">Visit Us</h5>
-                                  <!--   <p>4293 Euclid Avenue, Los Angeles,CA 90012</p> -->
+                                  <p>Technopolis IT Hub, 8th Floor, C-56 A/12
+                                    Sector 62, Noida - 201301, India</p> 
                                 </div>
                             </div>
                         </div>
@@ -232,12 +233,12 @@
     
 
 
-     <!--============= Footer Section Starts Here =============-->
-     <footer class="footer-section bg_img" data-background="assets/image/footer/footer-bg.jpg">
+        <!--============= Footer Section Starts Here =============-->
+    <footer class="footer-section">
         <div class="container">
-            <div class="footer-top padding-top padding-bottom">
+            <div class="footer-top">
                 <div class="logo">
-                    <a href="#0">
+                    <a href="index.html">
                         <img src="assets/image/logo/logo.png" alt="logo">
                     </a>
                 </div>
@@ -252,7 +253,19 @@
                     <li>
                         <a href="https://www.linkedin.com/showcase/myomnicard/" target="_blank"><i class="fab fa-linkedin"></i></a>
                     </li>
+                    <li>
+                        <a href="https://twitter.com/myomnicard" target="_blank"><i class="fab fa-twitter"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://www.youtube.com/channel/UCp80hnlCjm0YVR-m9gOZ9Gg" target="_blank"><i class="fab fa-youtube"></i></a>
+                    </li>
                 </ul>
+                <div class="f-logo">
+                    <a href="https://eroute.in/" target="_blank">
+                        <span>Brand owned by</span><br>
+                        <img src="assets/image/logo/eroute-logo.svg" alt="logo">
+                    </a>
+                </div>
             </div>
             <div class="footer-bottom">
                 <ul class="footer-link">
