--- a/index.html
+++ b/index.html
@@ -664,9 +664,9 @@
 
 
     <!--============= Footer Section Starts Here =============-->
-    <footer class="footer-section bg_img" data-background="assets/image/footer/footer-bg.jpg">
+    <footer class="footer-section">
         <div class="container">
-            <div class="footer-top padding-top padding-bottom">
+            <div class="footer-top">
                 <div class="logo">
                     <a href="index.html">
                         <img src="assets/image/logo/logo.png" alt="logo">
@@ -683,10 +683,17 @@
                     <li>
                         <a href="https://www.linkedin.com/showcase/myomnicard/" target="_blank"><i class="fab fa-linkedin"></i></a>
                     </li>
+                    <li>
+                        <a href="https://twitter.com/myomnicard" target="_blank"><i class="fab fa-twitter"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://www.youtube.com/channel/UCp80hnlCjm0YVR-m9gOZ9Gg" target="_blank"><i class="fab fa-youtube"></i></a>
+                    </li>
                 </ul>
                 <div class="f-logo">
-                    <a href="https://eroute.in/">
-                        <img src="assets/image/footer-logo.png" alt="logo">
+                    <a href="https://eroute.in/" target="_blank">
+                        <span>Brand owned by</span><br>
+                        <img src="assets/image/logo/eroute-logo.svg" alt="logo">
                     </a>
                 </div>
             </div>
