--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -1478,11 +1478,11 @@
 
 
       <!--============= Footer Section Starts Here =============-->
-      <footer class="footer-section bg_img" data-background="assets/image/footer/footer-bg.jpg">
+      <footer class="footer-section">
         <div class="container">
-            <div class="footer-top padding-top padding-bottom">
+            <div class="footer-top">
                 <div class="logo">
-                    <a href="#0">
+                    <a href="index.html">
                         <img src="assets/image/logo/logo.png" alt="logo">
                     </a>
                 </div>
@@ -1497,7 +1497,19 @@
                     <li>
                         <a href="https://www.linkedin.com/showcase/myomnicard/" target="_blank"><i class="fab fa-linkedin"></i></a>
                     </li>
+                    <li>
+                        <a href="https://twitter.com/myomnicard" target="_blank"><i class="fab fa-twitter"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://www.youtube.com/channel/UCp80hnlCjm0YVR-m9gOZ9Gg" target="_blank"><i class="fab fa-youtube"></i></a>
+                    </li>
                 </ul>
+                <div class="f-logo">
+                    <a href="https://eroute.in/" target="_blank">
+                        <span>Brand owned by</span><br>
+                        <img src="assets/image/logo/eroute-logo.svg" alt="logo">
+                    </a>
+                </div>
             </div>
             <div class="footer-bottom">
                 <ul class="footer-link">
@@ -1521,7 +1533,6 @@
         </div>
     </footer>
     <!--============= Footer Section Ends Here =============-->
-
 
 
     <!-- Modals -->
