--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -70,10 +70,8 @@
                         <a href="contact.html">contact</a>
                     </li>
                     <li class="d-sm-none">
-                        <a class="header-button d-none d-sm-inline-block"
-                            style="cursor: pointer !important;  background: transparent; border: 1px solid rgb(204, 189, 189);"
-                            data-toggle="modal" data-target="#myModal" data-backdrop="static" data-keyboard="false">Get
-                            OmniCard</a>
+                        <a data-toggle="modal" data-target="#myModal"  data-backdrop="static" data-keyboard="false" class="m-0 header-button">Get OmniCard</a>
+  
                     </li>
                 </ul>
                 <div class="header-bar d-lg-none">
@@ -1612,7 +1610,7 @@
                                                     name="email" id="email">
                                             </div>
 
-                                            <div class="row modal-footer">
+                                            <div class="modal-footer">
                                                 <p class="limited">Limited Period Offer</p>
                                                 <div class="col-sm-12 col-lg-12 col-xl-12 col-md-12 col-xs-12"
                                                     style="align-items: center; display: flex;">
