--- a/contact.html
+++ b/contact.html
@@ -364,7 +364,7 @@
                                                     <input type="email" class="form-control" placeholder="Email Address" name="email" id="email">
                                                 </div>
     
-                                                <div class="row modal-footer">
+                                                <div class="modal-footer">
                                                     <p class="limited">Limited Period Offer</p>
                                                     <div class="col-sm-12 col-lg-12 col-xl-12 col-md-12 col-xs-12"
                                                         style="align-items: center; display: flex;">
