--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./assets/css/flaticon.css">
     <link rel="stylesheet" href="./assets/css/main.css">
     <!--  <link rel="stylesheet" href="assets/css/minified.css"> -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./assets/css/styles.css">
     <link rel="shortcut icon" href="assets/image/favicon.png" type="image/x-icon">
 
     <style>
@@ -1617,10 +1617,10 @@
 <script src="./assets/js/counterup.min.js"></script>
 <script src="./assets/js/paroller.js"></script> -->
     <script src="assets/js/minified.js"></script>
-    <script src="./jquery.validate.min.js"></script>
+    <script src="assets/js/jquery.validate.min.js"></script>
     <script src="assets/js/TweenMax.min.js"></script>
     <script src="assets/js/main.js"></script>
-    <script src="./app.js"></script>
+    <script src="assets/js/app.js"></script>
 </body>
 
 
