--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
                         <a href="contact.html">contact</a>
                     </li>
                     <!-- <li class="d-sm-none">
-                        <a class="header-button d-none d-sm-inline-block" style="cursor: pointer !important;  background: transparent; border: 1px solid rgb(204, 189, 189);" data-toggle="modal" data-target="#myModal"  data-backdrop="static" data-keyboard="false">Get OmniCard</a>
+                        <a class="header-button d-none d-sm-inline-block" style="cursor: pointer !important;  background: transparent; border: 1px solid rgb(204, 189, 189);" data-toggle="modal" data-target="#myModal"  data-backdrop="static" data-keyboard="false">Get #OmniCard</a>
                     </li> -->
                 </ul>
                 <div class="header-bar d-lg-none">
@@ -78,7 +78,7 @@
                 </div>
                 <div class="header-right">
 
-<!--                     <a class="header-button  d-none d-sm-inline-block" style="cursor: pointer !important; background: transparent; border: 1px solid rgb(204, 189, 189);"  data-toggle="modal" data-target="#myModal"  data-backdrop="static" data-keyboard="false">Get OmniCard</a>
+<!--                     <a class="header-button  d-none d-sm-inline-block" style="cursor: pointer !important; background: transparent; border: 1px solid rgb(204, 189, 189);"  data-toggle="modal" data-target="#myModal"  data-backdrop="static" data-keyboard="false">Get #OmniCard</a>
  -->                </div>
             </div>
         </div>
@@ -88,7 +88,7 @@
 
 
     <!--============= Header Section Ends Here =============-->
-    <section class="page-header single-header bg_img oh" data-background="assets/image/page-header.png">
+    <section class="page-header single-header oh">
         <div class="bottom-shape d-none d-md-block">
             <img src="assets/css/img/page-header.png" alt="css">
         </div>
@@ -101,7 +101,7 @@
     <section class="contact-section padding-top padding-bottom">
         <div class="container">
             <div class="section-header mw-100 cl-white">
-                <h2 class="title">Contact OmniCard</h2>
+                <h2 class="title">Reach Us</h2>
                 <p>Whether you're looking for our response, have a support question or a commercial query get in touch.</p>
             </div>
             <div class="row justify-content-center justify-content-lg-between">
@@ -277,13 +277,13 @@
                         <a href="terms-conditions.html">Terms of Service</a>
                     </li>
                     <li>
-                        <a href="privacy-policy.html">Privacy</a>
+                        <a href="privacy-policy.html">Privacy Policy</a>
                     </li>
                 </ul>
             </div>
             <div class="copyright">
                 <p>
-                    Copyright © 2020.All Rights Reserved by <a href="index.html">OmniCard</a>
+                    Copyright © 2020. All Rights Reserved by <a href="index.html">OmniCard</a>
                 </p>
             </div>
         </div>
@@ -300,7 +300,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <div class="col-sm-10 col-lg-10 col-xl-10 col-md-10 col-xs-10" style="margin-top:.8em ;">
-                            <h4 class="modal-title" style="align-items: center; display: flex;">Get OmniCard</h4>
+                            <h4 class="modal-title" style="align-items: center; display: flex;">Get #OmniCard</h4>
                         </div>
                         <div class="col-sm-2 col-lg-2 col-xl-2 col-md-2 col-xs-2">
                             <button type="button" class="close" data-dismiss="modal" id="configreset" style="font-size: 2.2em;">&times;</button>
@@ -391,9 +391,7 @@
                                             <div class=" pa-boo">
                                                 <div class="data">
                                                 </div>
-                                                <div class="sharetastic">
-                                                   <!-- <img src="./assets/image/offer-2.png"> -->
-                                                </div>
+                                               
                                             </div>
                                         </div>
                                     </div>
