--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -70,7 +70,7 @@
                         <a href="contact.html">contact</a>
                     </li>
                     <li class="d-sm-none">
-                        <a data-toggle="modal" data-target="#myModal"  data-backdrop="static" data-keyboard="false" class="m-0 header-button">Get OmniCard</a>
+                        <a data-toggle="modal" data-target="#myModal"  data-backdrop="static" data-keyboard="false" class="m-0 header-button">Get #OmniCard</a>
   
                     </li>
                 </ul>
@@ -84,7 +84,7 @@
                     <a class="header-button  d-none d-sm-inline-block"
                         style="cursor: pointer !important; background: transparent; border: 1px solid rgb(204, 189, 189);"
                         data-toggle="modal" data-target="#myModal" data-backdrop="static" data-keyboard="false">Get
-                        OmniCard</a>
+                        #OmniCard</a>
                 </div>
             </div>
         </div>
@@ -93,16 +93,14 @@
 
 
     <!--============= Header Section Ends Here =============-->
-    <section class="page-header bg_img oh" data-background="assets/image/page-header.png">
+    <section class="page-header oh">
         <div class="bottom-shape d-none d-md-block">
             <img src="assets/css/img/page-header.png" alt="css">
         </div>
-        <div class="page-left-thumb">
-            <img src="assets/image/bg/privacy-header.png" alt="bg">
-        </div>
+       
         <div class="container">
             <div class="page-header-content cl-white">
-                <h4 class="title">OmniCard - Terms of use</h4>
+                <h4 class="title">Terms of Service</h4>
 
             </div>
         </div>
@@ -1519,13 +1517,13 @@
                         <a href="terms-conditions.html">Terms of Service</a>
                     </li>
                     <li>
-                        <a href="privacy-policy.html">Privacy</a>
+                        <a href="privacy-policy.html">Privacy Policy</a>
                     </li>
                 </ul>
             </div>
             <div class="copyright">
                 <p>
-                    Copyright © 2020.All Rights Reserved by <a href="index.html">OmniCard</a>
+                    Copyright © 2020. All Rights Reserved by <a href="index.html">OmniCard</a>
                 </p>
             </div>
         </div>
@@ -1541,7 +1539,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <div class="col-sm-10 col-lg-10 col-xl-10 col-md-10 col-xs-10" style="margin-top:.8em ;">
-                        <h4 class="modal-title" style="align-items: center; display: flex;">Get OmniCard</h4>
+                        <h4 class="modal-title" style="align-items: center; display: flex;">Get #OmniCard</h4>
                     </div>
                     <div class="col-sm-2 col-lg-2 col-xl-2 col-md-2 col-xs-2">
                         <button type="button" class="close" data-dismiss="modal" id="configreset"
@@ -1635,9 +1633,7 @@
                                         <div class=" pa-boo">
                                             <div class="data">
                                             </div>
-                                            <div class="sharetastic">
-                                                <!-- <img src="./assets/image/offer-2.png"> -->
-                                            </div>
+                                            
                                         </div>
                                     </div>
                                 </div>
