--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>OmniCard</title>
+    <title>Contact us- Omnicard</title>
+    <meta name="description" content="Omnicard is India's seccured and contactless payment prepaid card for young generation. So, to get your card contact us Now!">
     <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/all.min.css">
     <link rel="stylesheet" href="./assets/css/animate.css">
@@ -409,31 +410,7 @@
         <!-- Modals End -->
     
     </section>
-    <!--=================== RTL Feature Section Starts Here ===================-->
- <!--    <div class="swap-area active">
-        <div class="chorka">
-            <img src="assets/images/gear.png" alt="img">
-        </div>
-        <div class="swap-item">
-            <a href="http://pixner.net/mosto/demo/ltr/dark/index.html">Dark</a>
-        </div>
-        <div class="swap-item">
-            <a href="http://pixner.net/mosto/demo/rtl/light/index.html">RTL</a>
-        </div>
-    </div> -->
-    <!--=================== RTL Feature Section Ends Here ===================-->
-    <!-- <script src="./assets/js/jquery-3.3.1.min.js"></script>
-    <script src="./assets/js/modernizr-3.6.0.min.js"></script>
-    <script src="./assets/js/plugins.js"></script>
-    <script src="./assets/js/bootstrap.min.js"></script>
-    <script src="./assets/js/magnific-popup.min.js"></script>
-    <script src="./assets/js/jquery-ui.min.js"></script>
-    <script src="./assets/js/wow.min.js"></script>
-    <script src="./assets/js/waypoints.js"></script>
-    <script src="./assets/js/nice-select.js"></script>
-    <script src="./assets/js/owl.min.js"></script>
-    <script src="./assets/js/counterup.min.js"></script>
-    <script src="./assets/js/paroller.js"></script> -->
+
     <script src="assets/js/minified.js"></script>
     <script src="assets/js/jquery.validate.min.js"></script>
     <script src="assets/js/TweenMax.min.js"></script>
