card sequence update

--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
       <div class="container-fluid">
           <div class="row">
               <div class="col-md-5 col-12 w50">
-                  <img src="./assets/video/card.gif">
+                  <img src="./assets/video/card_new.gif">
                </div>
                 <div class="col-md-7 col-12 hoverImage">
                     <div class="row mrgn-btn text-center">
