button added to contact page

--- a/contact.html
+++ b/contact.html
@@ -68,9 +68,10 @@
                     <li>
                         <a href="contact.html">contact</a>
                     </li>
-                    <!-- <li class="d-sm-none">
-                        <a class="header-button d-none d-sm-inline-block" style="cursor: pointer !important;  background: transparent; border: 1px solid rgb(204, 189, 189);" data-toggle="modal" data-target="#myModal"  data-backdrop="static" data-keyboard="false">Get #OmniCard</a>
-                    </li> -->
+                    <li class="d-sm-none">
+                        <a data-toggle="modal" data-target="#myModal"  data-backdrop="static" data-keyboard="false" class="m-0 header-button">Get #OmniCard</a>
+  
+                    </li>
                 </ul>
                 <div class="header-bar d-lg-none">
                     <span></span>
@@ -79,8 +80,8 @@
                 </div>
                 <div class="header-right">
 
-<!--                     <a class="header-button  d-none d-sm-inline-block" style="cursor: pointer !important; background: transparent; border: 1px solid rgb(204, 189, 189);"  data-toggle="modal" data-target="#myModal"  data-backdrop="static" data-keyboard="false">Get #OmniCard</a>
- -->                </div>
+                     <a class="header-button  d-none d-sm-inline-block" style="cursor: pointer !important; background: transparent; border: 1px solid rgb(204, 189, 189);"  data-toggle="modal" data-target="#myModal"  data-backdrop="static" data-keyboard="false">Get #OmniCard</a>
+                </div>
             </div>
         </div>
     </header>
