WIP for updates

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -25,7 +25,7 @@
             padding: .5em;
             font-size: 16px;
         }
-        a {
+        #faq-menu a {
             font-size: 14px;
         }
         .privacy-item {
@@ -1455,7 +1455,7 @@
     
     <!-- Modals -->
 
-    <div class="row modal fade" style="overflow: auto; height: 100vh;" id="myModal" role="dialog">
+    <div class="row modal fade" style="overflow: auto;" id="myModal" role="dialog">
         <div class="modal-dialog" style="min-width: 42vw ;">
             <!-- Modal content-->
             <div class="modal-content">
