--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -27,9 +27,7 @@
             font-size: 16px;
         }
 
-        a {
-            font-size: 14px;
-        }
+     
 
         .privacy-item {
             padding-top: 15vh;
@@ -1533,7 +1531,7 @@
 
     <!-- Modals -->
 
-    <div class="row modal fade" style="overflow: auto; height: 100vh;" id="myModal" role="dialog">
+    <div class="row modal fade" style="overflow: auto;" id="myModal" role="dialog">
         <div class="modal-dialog" style="min-width: 42vw ;">
             <!-- Modal content-->
             <div class="modal-content">
