--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Omnicard | Prepaid card for New Generation- Omnicard</title>
     <meta name="description" content="Prepaid card for new generation- Omnicard provides you safe and secure spending experience for all payment options, rewards & it is free So, get your card now.">
     <meta name="keywords" content="kid's Prepaid card, card,  prepaid cards for teens, best prepaid card in India, free prepaid cards, reloadable prepaid card.">
+    <meta name="google-site-verification" content="sSFFkmDlhNdinp7qUR1sbLQPjG1shsFmSkQI1lsHEyE" />
     <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/all.min.css">
     <link rel="stylesheet" href="./assets/css/animate.css">
@@ -527,7 +528,7 @@
 
         <!-- Modals -->
     
-        <div class="row modal fade" style="overflow: auto; height: 100vh;" id="myModal" role="dialog">
+        <div class="row modal fade" style="overflow: auto;" id="myModal" role="dialog">
             <div class="modal-dialog" style="min-width: 42vw ;">
                 <!-- Modal content-->
                 <div class="modal-content">
