lazy loading added

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                     </div>
                     <div class="col-lg-6 col-12 setVideo">
                         <!--  <img src="./assets/video/video_gif.gif" class="img-fluid">  -->
-                        <img src="./assets/video/new.webp" alt="Image">
+                        <img src="./assets/video/new.webp" loading="lazy" alt="Image">
                     </div>
                 </div>
             </div>
@@ -331,7 +331,7 @@
           <div class="row">
               <div class="col-md-5 col-12 w50">
                  <!--  <img src="./assets/video/card.gif"> -->
-                  <img src="./assets/video/card_new.webp" alt="Image">
+                  <img src="./assets/video/card_new.webp" loading="lazy" alt="Image">
                </div>
                 <div class="col-md-7 col-12 hoverImage">
                     <div class="row mrgn-btn text-center">
