--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
           <div class="row">
               <div class="col-md-5 col-12 w50">
                  <!--  <img src="./assets/video/card.gif"> -->
-                 <img src="./assets/video/000.png" alt="Image">
+                 <img src="./assets/video/card_new.webp" alt="Image">
                </div>
                 <div class="col-md-7 col-12 hoverImage">
                     <div class="row mrgn-btn text-center">
