chng style for privacy policy

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1012,7 +1012,8 @@
                                 data in the manner provided below. You should also remain informed of your rights with
                                 regards to the use of your data and information by us. Your rights with regards to your
                                 data are listed below.</p>
-                            <table border="1" width="100%">
+                            <div class="table-responsive">
+                                <table border="1" class="table" width="100%">
                                 <tbody>
                                     <tr>
                                         <td>
@@ -1323,6 +1324,7 @@
                                     </tr>
                                 </tbody>
                             </table>
+                            </div>
                         </div>
                         <div class="privacy-item" id="security">
                             <h3 class="title">What are Our Data Security Practices?</h3>
