--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <a href="contact.html">contact</a>
                     </li>
                     <li class="d-sm-none">
-                        <a data-toggle="modal" data-target="#myModal"  data-backdrop="static" data-keyboard="false" class="m-0 header-button">Get #OmniCard</a>
+                        <a data-toggle="modal" data-target="#myModal"  data-backdrop="static" data-keyboard="false" class="m-0 header-button">Get #myOmniCard</a>
   
                     </li>
                 </ul>
@@ -77,8 +77,8 @@
                 <div class="header-right">
                     <button type="button" class="header-button d-none d-sm-inline-block"
                         style="background-color: transparent;" data-toggle="modal" data-target="#myModal"  data-backdrop="static" data-keyboard="false">Get
-                        #OmniCard</button>
-                    <!-- <a href="#0" class="header-button d-none d-sm-inline-block">Get #OmniCard</a> -->
+                        #myOmniCard</button>
+                    <!-- <a href="#0" class="header-button d-none d-sm-inline-block">Get #myOmniCard</a> -->
                 </div>
             </div>
         </div>
@@ -533,7 +533,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <div class="col-sm-10 col-lg-10 col-xl-10 col-md-10 col-xs-10" style="margin-top:.8em ;">
-                            <h4 class="modal-title" style="align-items: center; display: flex;">Get #OmniCard</h4>
+                            <h4 class="modal-title" style="align-items: center; display: flex;">Get #myOmniCard</h4>
                         </div>
                         <div class="col-sm-2 col-lg-2 col-xl-2 col-md-2 col-xs-2">
                             <button type="button" class="close" data-dismiss="modal" id="configreset" style="font-size: 2.2em;">&times;</button>
