--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -58,7 +58,7 @@
                         <a href="contact.html">contact</a>
                     </li>
                     <li class="d-sm-none">
-                        <a data-toggle="modal" data-target="#myModal"  data-backdrop="static" data-keyboard="false" class="m-0 header-button">Get #OmniCard</a>
+                        <a data-toggle="modal" data-target="#myModal"  data-backdrop="static" data-keyboard="false" class="m-0 header-button">Get #myOmniCard</a>
   
                     </li>
                 </ul>
@@ -72,7 +72,7 @@
                     <a class="header-button  d-none d-sm-inline-block"
                         style="cursor: pointer !important; background: transparent; border: 1px solid rgb(204, 189, 189);"
                         data-toggle="modal" data-target="#myModal" data-backdrop="static" data-keyboard="false">Get
-                        #OmniCard</a>
+                        #myOmniCard</a>
                 </div>
             </div>
         </div>
@@ -1527,7 +1527,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <div class="col-sm-10 col-lg-10 col-xl-10 col-md-10 col-xs-10" style="margin-top:.8em ;">
-                        <h4 class="modal-title" style="align-items: center; display: flex;">Get #OmniCard</h4>
+                        <h4 class="modal-title" style="align-items: center; display: flex;">Get #myOmniCard</h4>
                     </div>
                     <div class="col-sm-2 col-lg-2 col-xl-2 col-md-2 col-xs-2">
                         <button type="button" class="close" data-dismiss="modal" id="configreset"
