--- a/index.html
+++ b/index.html
@@ -224,10 +224,9 @@
 				</div>
 				<div class="col-lg-6 mb-40">
 					<div class="section-header left-style mb-0">
-						<h5 class="cate">Family Expenses</h5>
-						<h2 class="title">Family finance app for kids, teens, and parents</h2>
-						<p>With the tap of a button, send money to your kids — anytime, anywhere. No trips to the ATM, no cash, no hassle.</p>
-					<p>Using our unique parental controls you decide where and how much your child can spend.</p>
+						<h5 class="cate"> Card for Everyone</h5>
+						<h2 class="title">You get peace of mind. They get the card</h2>
+						<p>Kids have their own card with an opportunity to learn financial responsibility and budgeting from an early age, learning to save and have independence to spend online or in stores. Using our unique parental controls you decide where and how much your child can spend.</p>
                     </div>
 				</div>
 			</div>
@@ -581,7 +580,7 @@
 		</div>
 		<!-- Modals End -->
 	</section>
-   <script src="assets/js/minified.js"></script> 
+	 <script src="assets/js/minified.js"></script> 
 	<script src="assets/js/main.js"></script>
 	<script src="assets/js/app.js"></script>
 </body>
