--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>OmniCard</title>
+    <title>Terms of Service - OmniCard</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-1/css/all.min.css"> 
     <link rel="stylesheet" href="./assets/css/minified.css">
     <link rel="stylesheet" href="./assets/css/main.css">
