--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
 						<div class="tags-area">
 							<h3 class="tags">ZERO</h3>
 						</div>
-						<div class="pricing-header text-center" style="overflow: hidden; height: 70px;">
+						<div class="pricing-header text-center">
 							<ul class="v-slides">
 								<li class="v-slide">Joining Charges</li>
 								<li class="v-slide">Card Charges</li>
