--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Omnicard | Prepaid card for New Generation</title>
 	<meta name="description" content="Prepaid card for new generation- Omnicard provides you safe and secure spending experience for all payment options, rewards & it is free So, get your card now.">
-	<meta name="keywords" content="kid's Prepaid card, card,  prepaid cards for teens, best prepaid card in India, free prepaid cards, reloadable prepaid card.">
 	<meta name="google-site-verification" content="sSFFkmDlhNdinp7qUR1sbLQPjG1shsFmSkQI1lsHEyE" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-1/css/all.min.css">
 	<link rel="stylesheet" href="./assets/css/minified.css">
@@ -155,15 +154,19 @@
 					<div class="sponsor-slider owl-theme owl-carousel">
 						<div class="sponsor-thumb">
 							<img src="assets/image/icons/1.svg" alt="icons">
+							<span>Swipe & Pay</span>
 						</div>
 						<div class="sponsor-thumb">
 							<img src="assets/image/icons/2.svg" alt="icons">
+							<span>Scan & Pay</span>
 						</div>
 						<div class="sponsor-thumb">
 							<img src="assets/image/icons/3.svg" alt="icons">
+							<span>Tap & Pay</span>
 						</div>
 						<div class="sponsor-thumb">
 							<img src="assets/image/icons/4.svg" alt="icons">
+							<span>E-commerce</span>
 						</div>
 					</div>
 				</div>
