--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta name="google-site-verification" content="sSFFkmDlhNdinp7qUR1sbLQPjG1shsFmSkQI1lsHEyE" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-1/css/all.min.css">
 	<link rel="stylesheet" href="./assets/css/minified.css">
-	<link rel="stylesheet" href="./assets/css/main.css">
+	<link rel="stylesheet" href="./assets/css/main.css?v1.01">
 	<link rel="stylesheet" href="./assets/css/styles.css">
 	<link rel="shortcut icon" href="assets/image/favicon.png" type="image/x-icon">
 	<style>
@@ -583,7 +583,7 @@
 		</div>
 		<!-- Modals End -->
 	</section>
-	 <script src="assets/js/minified.js"></script> 
+	 <script src="assets/js/minified.js?v1.01"></script> 
 	<script src="assets/js/main.js"></script>
 	<script src="assets/js/app.js"></script>
 </body>
