--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -9,7 +9,7 @@
     <title>Terms of Service - OmniCard</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-1/css/all.min.css"> 
     <link rel="stylesheet" href="./assets/css/minified.css">
-    <link rel="stylesheet" href="./assets/css/main.css">
+    <link rel="stylesheet" href="./assets/css/main.css?v1.01">
     <link rel="stylesheet" href="./assets/css/styles.css">
     <link rel="shortcut icon" href="assets/image/favicon.png" type="image/x-icon">
 
@@ -1625,7 +1625,7 @@
     </div>
     <!-- Modals End -->
 
-    <script src="assets/js/minified.js"></script>
+    <script src="assets/js/minified.js?v1.01"></script>
     <script src="assets/js/main.js"></script>
     <script src="assets/js/app.js"></script>
 </body>
