seo tag updated

--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
 		<div class="container">
 			<div class="header-wrapper">
 				<div class="logo">
-					<a href="index.html">
+					<a href="/">
 						<img src="assets/image/logo/logo.png" alt="logo">
 					</a>
 				</div>
@@ -197,7 +197,7 @@
 		<div class="container">
 			<div class="footer-top">
 				<div class="logo">
-					<a href="index.html">
+					<a href="/">
 						<img src="assets/image/logo/logo.png" alt="logo">
 					</a>
 				</div>
@@ -231,7 +231,7 @@
 				</ul>
 			</div>
 			<div class="copyright">
-				<p>Copyright © 2020. All Rights Reserved by <a href="index.html">OmniCard</a>
+				<p>Copyright © 2020. All Rights Reserved by <a href="/">OmniCard</a>
 				</p>
 			</div>
 		</div>
