--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -45,7 +45,7 @@
         <div class="container">
             <div class="header-wrapper">
                 <div class="logo">
-                    <a href="index.html">
+                    <a href="/">
                         <img src="assets/image/logo/logo.png" alt="logo">
                     </a>
                 </div>
@@ -1466,7 +1466,7 @@
         <div class="container">
             <div class="footer-top">
                 <div class="logo">
-                    <a href="index.html">
+                    <a href="/">
                         <img src="assets/image/logo/logo.png" alt="logo">
                     </a>
                 </div>
@@ -1511,7 +1511,7 @@
             </div>
             <div class="copyright">
                 <p>
-                    Copyright © 2020. All Rights Reserved by <a href="index.html">OmniCard</a>
+                    Copyright © 2020. All Rights Reserved by <a href="/">OmniCard</a>
                 </p>
             </div>
         </div>
