--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -49,7 +49,7 @@
         <div class="container">
             <div class="header-wrapper">
                 <div class="logo">
-                    <a href="index.html">
+                    <a href="/">
                         <img src="assets/image/logo/logo.png" alt="logo">
                     </a>
                 </div>
@@ -1390,7 +1390,7 @@
         <div class="container">
             <div class="footer-top">
                 <div class="logo">
-                    <a href="index.html">
+                    <a href="/">
                         <img src="assets/image/logo/logo.png" alt="logo">
                     </a>
                 </div>
@@ -1435,7 +1435,7 @@
             </div>
             <div class="copyright">
                 <p>
-                    Copyright © 2020. All Rights Reserved by <a href="index.html">OmniCard</a>
+                    Copyright © 2020. All Rights Reserved by <a href="/">OmniCard</a>
                 </p>
             </div>
         </div>
