--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-1/css/all.min.css">
 	<link rel="stylesheet" href="./assets/css/minified.css">
 	<link rel="stylesheet" href="./assets/css/main.css?v1.01">
+	<link rel="stylesheet" href="./assets/css/styles.css">
  	<link rel="shortcut icon" href="assets/image/favicon.png" type="image/x-icon">
 	<style>
 		p {
