--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -1060,7 +1060,7 @@
                                     access
                                     our Services. If you do not take necessary safeguards you will be responsible,
                                     within limits imposed by law, for any loss associated with the unauthorized use of
-                                    your FamPay OmniCard Account and Wallet Account.
+                                    your OmniCard Account and Wallet Account.
 
                                 </li>
 
