png replece with svg

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -50,7 +50,7 @@
             <div class="header-wrapper">
                 <div class="logo">
                     <a href="/">
-                        <img src="assets/image/logo/logo.png" alt="logo">
+                        <img src="assets/image/logo/logo_white.svg" alt="logo">
                     </a>
                 </div>
                 <ul class="menu">
@@ -1391,7 +1391,7 @@
             <div class="footer-top">
                 <div class="logo">
                     <a href="/">
-                        <img src="assets/image/logo/logo.png" alt="logo">
+                        <img src="assets/image/logo/logo_white.svg" alt="logo">
                     </a>
                 </div>
                 <ul class="social-icons">
