--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -46,7 +46,7 @@
             <div class="header-wrapper">
                 <div class="logo">
                     <a href="/">
-                        <img src="assets/image/logo/logo.png" alt="logo">
+                        <img src="assets/image/logo/logo_white.svg" alt="logo">
                     </a>
                 </div>
                 <ul class="menu">
@@ -1467,7 +1467,7 @@
             <div class="footer-top">
                 <div class="logo">
                     <a href="/">
-                        <img src="assets/image/logo/logo.png" alt="logo">
+                        <img src="assets/image/logo/logo_white.svg" alt="logo">
                     </a>
                 </div>
                 <ul class="social-icons">
