--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -10,7 +10,7 @@
     <title>Privacy Policy - OmniCard </title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-1/css/all.min.css"> 
     <link rel="stylesheet" href="./assets/css/minified.css">
-    <link rel="stylesheet" href="./assets/css/main.css?v1.04">
+    <link rel="stylesheet" href="./assets/css/main.css?v1.05">
     <link rel="stylesheet" href="./assets/css/styles.css">
     <link rel="shortcut icon" href="assets/image/favicon.png" type="image/x-icon">
 
@@ -1430,6 +1430,9 @@
                     </li>
                     <li>
                         <a href="privacy-policy.html">Privacy Policy</a>
+                    </li>
+                    <li>
+                        <a href="faqs.html">Faqs</a>
                     </li>
                 </ul>
             </div>
