--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta name="google-site-verification" content="sSFFkmDlhNdinp7qUR1sbLQPjG1shsFmSkQI1lsHEyE" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-1/css/all.min.css" />
 	<link rel="stylesheet" href="./assets/css/minified.css" />
-	<link rel="stylesheet" href="./assets/css/main.css?v1.04" />
+	<link rel="stylesheet" href="./assets/css/main.css?v1.05" />
 	<link rel="stylesheet" href="./assets/css/styles.css" />
 	<link rel="shortcut icon" href="assets/image/favicon.png" type="image/x-icon" />
 	<script>  
@@ -353,6 +353,9 @@
 					<li><a href="contact.html">Contact</a></li>
 					<li><a href="terms-conditions.html">Terms of Service</a></li>
 					<li><a href="privacy-policy.html">Privacy Policy</a></li>
+					<li>
+                        <a href="faqs.html">Faqs</a>
+                    </li>
 				</ul>
 			</div>
 			<div class="copyright">
