--- a/contact.html
+++ b/contact.html
@@ -229,7 +229,7 @@
 					<li> <a href="privacy-policy.html">Privacy Policy</a>
 					</li>
 					<li>
-                        <a href="faqs.html">Faqs</a>
+                        <a href="faqs.html">FAQs</a>
                     </li>
 				</ul>
 			</div>
