--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 					<li><a href="terms-conditions.html">Terms of Service</a></li>
 					<li><a href="privacy-policy.html">Privacy Policy</a></li>
 					<li>
-                        <a href="faqs.html">Faqs</a>
+                        <a href="faqs.html">FAQs</a>
                     </li>
 				</ul>
 			</div>
