--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1432,7 +1432,7 @@
                         <a href="privacy-policy.html">Privacy Policy</a>
                     </li>
                     <li>
-                        <a href="faqs.html">Faqs</a>
+                        <a href="faqs.html">FAQs</a>
                     </li>
                 </ul>
             </div>
