--- a/contact.html
+++ b/contact.html
@@ -47,6 +47,9 @@
 				<ul class="menu">
 					<li> <a href="contact.html">contact</a>
 					</li>
+					<li>
+                        <a href="faqs.html">FAQs</a>
+                    </li>
 					<li class="d-sm-none"> <a data-toggle="modal" data-target="#myModal" data-backdrop="static" data-keyboard="false" class="m-0 header-button">Get #myOmniCard</a>
 					</li>
 				</ul>
