--- a/faqs.html
+++ b/faqs.html
@@ -61,6 +61,9 @@
                     <li>
                         <a href="contact.html">contact</a>
                     </li>
+                    <li>
+                        <a href="faqs.html">FAQs</a>
+                    </li>
                     <li class="d-sm-none">
                         <a data-toggle="modal" data-target="#myModal"  data-backdrop="static" data-keyboard="false" class="m-0 header-button">Get #myOmniCard</a>
   
@@ -397,6 +400,15 @@
                     <div class="faq--wrapper" id="offer">
                         <h3 class="main-title">Offers & Rewards</h3>
                         <div class="faq--area">
+                            <div class="faq--item">
+                                <div class="faq-title">
+                                    <h6 class="title">What kind of offers are available to me?</h6>
+                                    <span class="icon"></span>
+                                </div>
+                                <div class="faq-content">
+                                    <p>You can avail offers from your favorite brands including categories such as - Food, Travel, Lifestyle, Electronics, Health, Apparels and many more. For more information and latest offers check out our in-app rewards section.</p>
+                                </div>
+                            </div>
                             <div class="faq--item">
                                 <div class="faq-title">
                                     <h6 class="title">What are OMNIs?</h6>
