--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -57,6 +57,9 @@
                     <li>
                         <a href="contact.html">contact</a>
                     </li>
+                    <li>
+                        <a href="faqs.html">FAQs</a>
+                    </li>
                     <li class="d-sm-none">
                         <a data-toggle="modal" data-target="#myModal"  data-backdrop="static" data-keyboard="false" class="m-0 header-button">Get #myOmniCard</a>
   
