--- a/faqs.html
+++ b/faqs.html
@@ -266,7 +266,7 @@
                                     <p>   <strong> 5. Rewards that matter:</strong> Get rewarded with OMNIs every time you pay, which you can redeem for exclusive offers from the brands you love.</p>
                                 </div>
                             </div>
-                            <div class="faq--item open active">
+                            <div class="faq--item">
                                 <div class="faq-title">
                                     <h6 class="title">How safe is OmniCard?</h6>
                                     <span class="icon"></span>
@@ -288,6 +288,19 @@
                                     <p>3. Asking parents for their card and OTP for online transactions</p>
                                     <p>4. Borrowing money from friends when running short</p>
                                     <p> There are many more unpredictable situations where OmniCard can be helpful for kids who prefer the smarter, faster, and stress-free way of living.</p>
+                                </div>
+                            </div>
+                            <div class="faq--item">
+                                <div class="faq-title">
+                                    <h6 class="title">How do I get started?</h6>
+                                    <span class="icon"></span>
+                                </div>
+                                <div class="faq-content">
+                                    <p>To get started: -</p>
+                                    <p>   1. Download the OmniCard app and create your account. Get you parent's permission from their OmniCard account (in case of below 18).</p>
+                                     <p>  2. Create and order your own unique OmniCard</p>
+                                    <p>  3. Request or load money.</p>
+                                       <p>    And you're all set to spend, save, analyze & enjoy all the exclusive offers that comes with OmniCard.</p>
                                 </div>
                             </div>
                             <div class="faq--item">
