--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<meta property="og:image" content="/assets/image/banner/black-card.png" />
 	<meta property="og:url" content="https://omnicard.in/" />
 	<meta property="twitter:card" content="summary_large_image" />
-	<meta property="twitter:image" content="https://res.cloudinary.com/fay/image/upload/w_1280,h_640,c_fill,q_auto,f_auto/w_860,c_fit,co_rgb:232129,g_west,x_80,y_-60,l_text:Source%20Sans%20Pro_70_line_spacing_-10_semibold:Anyone%20Can%20Map!%20Inspiration%20and%20an%20introduction%20to%20the%20world%20of%20mapping/blog-social-card-1.1" />
+	<meta property="twitter:image" content="/assets/image/banner/black-card.png" />
 	<meta property="twitter:site" content="@myomnicard" />
     <meta name="google-site-verification" content="sSFFkmDlhNdinp7qUR1sbLQPjG1shsFmSkQI1lsHEyE" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-1/css/all.min.css" />
