--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -135,7 +135,7 @@
             </div>
             <div class="row justify-content-between">
                 <div class="col-lg-4">
-                    <aside class="sticky-menu">
+                    <aside class="sticky-menu" style="height: 80vh !important; overflow: auto;">
                         <div class="faq-menu bg_img " style="padding: 2em 1em !important;"
                             data-background="assets/image/menu.png">
                             <ul id="faq-menu">
@@ -292,7 +292,7 @@
                                     the transaction log undertaken for a period of 5 and 10 years respectively amended
                                     from time to time after closure of your OmniCard ® account, which will include your
                                     personal data such as your name, contact details, customer number and transaction
-                                    history, etc.. Theseis records and data shall be made available for scrutiny to RBI
+                                    history, etc.. These records and data shall be made available for scrutiny to RBI
                                     or any other agency agencies as may be advised by RBI. Other than the mentioned
                                     Data, we will delete and destroy all Personal Information that we hold about you
                                     when you (or we) terminate your OmniCard ® account.</p>
