--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -191,6 +191,12 @@
                                 </li>
 
                                 <li class="nav-item">
+                                    <a class="nav-link" href="#securities"> Security
+                                    </a>
+                                </li>
+
+
+                                <li class="nav-item">
                                     <a class="nav-link" href="#UpdatesandChangestoPrivacyPolicy">Updates and Changes to Privacy Policy
                                     </a>
                                 </li>
@@ -739,7 +745,9 @@
                                 forum. What you have written may be seen and/or collected by third parties and may be
                                 used by others in ways we are unable to control or predict.
                             </p>
-                            <h6> Security</h6>
+                            </div>
+                            <div class="privacy-item" id="securities">
+                            <h3 class="title"> Security</h6>
                             <p>1. We are committed to ensuring that your Information is secure. To prevent unauthorised
                                 access or disclosure of Information we have physical, electronic and managerial
                                 procedures in place to keep your information safe. Once logged into your OmniCard ®
