--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 				<div class="col-lg-6">
 					<div class="banner-content-1 cl-white">
 						<h1 class="title">A Unique &amp; Enduring</h1>
-						<h1 class="title">Payment Experience for Young</h1>
+						<h1 class="title">Payment Experience for Young...</h1>
 						<p>A reliable pre-paid card packed with the power of intuitive mobile app</p>
 						<div class="banner-button-group"><a href="#0" class="button-4" data-toggle="modal" data-target="#myModal" data-backdrop="static" data-keyboard="false">Start Using Now</a></div>
 					</div>
